@@ -78,6 +78,7 @@ nodes to be placed outside of buildings defined in the scenario.</li>
     the flow the packet belongs to, unless a packet filter has been configured.
     The previous behavior is simply obtained by not configuring any packet filter.
     Consequently, the FqCoDelIpv{4,6}PacketFilter classes have been removed.</li>
+  <li> ARP packets now pass through the traffic control layer, as in Linux. </li>
 </ul>
 
 <hr>
